#pragma once

#include <Blob/GL/Texture.hpp>

namespace Blob::Core {

class Texture : public GL::Texture {};

}