@startuml
title BlobEngine

namespace Blob {

    namespace GL {
        class Material {}
        class VAO {}
        class VBO {}
        class Shader {}
        class Window {}
        class Texture {}
    }

    namespace Core {
        class Buffer {}
        class Camera {}
        class Exception {}
        interface Material {}
        class Mesh {}
        class Primitive {}
        class RenderOptions {}
        class Scene {}
        class Shader {}
        class Node {}
        class Texture {}
        class Window {}

        class Indices {}
        class Attribute {}

        Shader <--* Material
        Buffer <.. Attribute
        RenderOptions <-r-* Primitive
        Attribute <--* Primitive
        Indices <--* Primitive
        Material <-- Primitive
        Primitive <-r- Mesh
        Mesh <-r- Node
        Node <-- Node
        Node <-r- Scene
        Scene <-- Window

        Camera <-- Scene
    }

    .Blob.GL.Material <|-- .Blob.Core.Material
    .Blob.GL.VBO <|-- .Blob.Core.Indices
    .Blob.GL.VBO <|-- .Blob.Core.Buffer
    .Blob.GL.VAO <|-- .Blob.Core.Attribute
    .Blob.GL.Shader <|-- .Blob.Core.Shader
    .Blob.GL.Window <|-- .Blob.Core.Window
    .Blob.GL.Texture <|-- .Blob.Core.Texture

    namespace Maths {
        class ProjectionTransform {}
        class ModelTransform {}
        class ViewTransform {}
    }

    .Blob.Maths.ProjectionTransform <|-- .Blob.Core.Window
    .Blob.Maths.ModelTransform <|-- .Blob.Core.Shape
    .Blob.Maths.ViewTransform <|-- .Blob.Core.Camera

    namespace ImGui {
        class Instance {}
    }

    .Blob.ImGui.Instance <--* .Blob.Core.Window

    namespace GLFW {
        class Keys {}
        class Window {}
    }

    .Blob.GLFW.Window <|-- .Blob.Core.Window
}
@enduml
@startuml
title BlobEngine

title BlobEngine 2D collision

namespace Blob {

    class Object <Entity> {
    }

    EntityRegistry *-up-> Object


    namespace Collision {
        CollisionManager --> Blob.EntityRegistry
        CollisionManager .up.> HitBox
        CollisionManager .up.> Velocity


        Blob.Object o-up-> Velocity
        Blob.Object o-up-> HitBox

        class CollisionManager <System> {

        }

        class HitBox <Component> {
            + x : float
            + y : float
            + w : float
            + h : float
        }
        class Velocity <Component> {
            + dx : float
            + dy : float
        }
    }

    class Vec2f {
        + x : float
        + y : float
    }
}
@enduml
